--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,9 @@
     "prettier"
   ],
   "rules": {
+    "react/prop-types": "off",
+    "no-unused-expressions": "off",
+    "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
     "react/jsx-one-expression-per-line": "off",
     "react-hooks/rules-of-hooks": "error",
